Set up layout using gridism.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
 layout: default
 title: WOODY
 ---
+
+<header>
+  <div class="grid">
+    <div class="unit whole">
+      <a href="/"><img id="main-title" src="/img/main-title.png" width="389" height="100"></a>
+      <img id="awards" src="/img/awards.png" width="492" height="40">
+    </div>
+  </div>
+</header>
