Basics of intro and info done.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,67 @@ title: WOODY
 
 <header>
   <div class="grid">
-    <div class="unit whole">
-      <a href="/"><img id="main-title" src="/img/main-title.png" width="389" height="100"></a>
-      <img id="awards" src="/img/awards.png" width="492" height="40">
+    <div id="masthead" class="unit whole no-gutters">
+      <a href="/"><img id="title" src="/img/main-title.png" width="389" height="100"/></a>
+      <img id="awards" src="/img/awards.png" width="492" height="40"/>
+    </div>
+    <div id="masthead-separator" class="unit whole no-gutters">
     </div>
   </div>
 </header>
+
+<div id="intro" class="grid">
+  <div class="unit whole">
+    <div class="title">
+      HIS DREAMS ARE BIG...<br/>
+      BUT THEY'RE ABOUT TO GET<br/>
+      OUT OF HAND
+    </div>
+    <div class="sub-title">
+      THE STOP MOTION ANIMATED<br/>
+      SHORT FILM
+    </div>
+    <div class="social">
+      <a href="https://www.facebook.com/pages/Woody-Short-Film/147284742082289" target="_blank"><img src="/img/facebook.png" width="38" height="38"/></a>
+      <a href="https://twitter.com/woodyshortfilm" target="_blank"><img src="/img/twitter.png" width="38" height="38"/></a>
+    </div>
+    <div id="nav-and-credits" class="grid">
+      <div id="nav" class="unit half align-left pull-left">
+        <ul>
+          <li><a href="#info">INFO</a></li>
+          <li><a href="#news">NEWS</a></li>
+          <li><a href="#video">VIDEO</a></li>
+          <li><a href="#images">IMAGES</a></li>
+        </ul>
+      </div>
+      <div id="credits" class="unit half pull-right">
+        <img src="/img/credits.png" width="454" height="53"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="info" class="grid">
+  <div class="unit whole">
+    <p class="section-heading">INFO</p>
+    <p class="paragraph">
+      Ever since he was a child, Woody has dreamt of playing piano. The
+      problem is that he only has wooden paddles for hands. Stuck in a job
+      he doesn&rsquo;t want, Woody spends his days of being a concert
+      pianist. His dreams are big...but they&rsquo;re about to get out of
+      hand.
+    </p>
+    <p class="paragraph">
+      WOODY was in production for over 2 years and developed from 
+      conversations I was having with producer Jodi Matterson. I&rsquo;ve
+      always loved stop motion and was keen to tell an animated story. There
+      is a brilliant tactility to stop motion, and a great resonance
+      thematically with the story of a character wanting fingers &mdash;
+      articulated 24 frames per second by the animator&rsquo;s fingers.
+    </p>
+    <p class="paragraph">
+      We shot the first minute of the film self-funded &mdash; and then
+      opened it up to the public and had two successful ...
+    </p>
+  </div>
+</div>
