Added news and video sections.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: WOODY
   </div>
 </header>
 
-<div id="intro" class="grid">
+<div id="intro" class="grid background-cover">
   <div class="unit whole">
     <div class="title">
       HIS DREAMS ARE BIG...<br/>
@@ -45,7 +45,7 @@ title: WOODY
   </div>
 </div>
 
-<div id="info" class="grid">
+<div id="info" class="grid background-cover">
   <div class="unit whole">
     <p class="section-heading">INFO</p>
     <p class="paragraph">
@@ -67,5 +67,45 @@ title: WOODY
       We shot the first minute of the film self-funded &mdash; and then
       opened it up to the public and had two successful ...
     </p>
+  </div>
+</div>
+
+<div id="news" class="grid background-cover">
+  <div class="unit whole">
+    <p class="section-heading">NEWS</p>
+  </div>
+</div>
+
+<div id="video" class="grid background-cover">
+  <div class="unit whole">
+    <p class="section-heading">VIDEO</p>
+    <p class="quote">'WHERE DID YOU GET<br/>
+      YOUR IDEAS FROM?'<br/>
+      'THE IDEAS? OH MAN...<br/>
+      I GOT A MILLION DREAMS...<br/>
+      IT'S ALL I DO IS DREAM...<br/>
+      ALL THE TIME'<br/>
+      <span class="quoter">&mdash; Duke Ellington</span>
+    </p>
+    <div id="video-thumbnails" class="grid left-align">
+      <div class="unit one-third align-center pull-left">
+        <a href="#">
+          <img src="/img/woody-trailer-thumb.jpg" width="133">
+        Woody<br/>
+        Trailer</a>
+      </div>
+      <div class="unit one-third align-center">
+        <a href="#">
+          <img src="/img/woody-making-of-thumb.jpg" width="133">
+        The Making<br/>
+        of Woody</a>
+      </div>
+      <div class="unit one-third align-center pull-right">
+        <a href="#">
+          <img src="/img/woody-mood-reel-thumb.jpg" width="133">
+        Woody<br/>
+        Mood Reel</a>
+      </div>
+    </div>
   </div>
 </div>
