Added basic footer.

--- a/index.html
+++ b/index.html
@@ -90,22 +90,39 @@ title: WOODY
     <div id="video-thumbnails" class="grid left-align">
       <div class="unit one-third align-center pull-left">
         <a href="#">
-          <img src="/img/woody-trailer-thumb.jpg" width="133">
+          <img src="/img/woody-trailer-thumb.jpg" width="133"><br/>
         Woody<br/>
         Trailer</a>
       </div>
       <div class="unit one-third align-center">
         <a href="#">
-          <img src="/img/woody-making-of-thumb.jpg" width="133">
+          <img src="/img/woody-making-of-thumb.jpg" width="133"><br/>
         The Making<br/>
         of Woody</a>
       </div>
       <div class="unit one-third align-center pull-right">
         <a href="#">
-          <img src="/img/woody-mood-reel-thumb.jpg" width="133">
+          <img src="/img/woody-mood-reel-thumb.jpg" width="133"><br/>
         Woody<br/>
         Mood Reel</a>
       </div>
     </div>
   </div>
 </div>
+
+<div id="images" class="grid background-cover">
+  <div class="unit whole">
+    <p class="section-heading">IMAGES</p>
+  </div>
+</div>
+
+<footer>
+  <div class="grid">
+    <div id="copyright" class="unit half align-left">
+      STUART BOWEN • WOODY &copy; 2013
+    </div>
+    <div id="email" class="unit half align-right">
+      EMAIL INFO@WOODYSHORTFILM FOR MORE INFO
+    </div>
+  </div>
+</footer>
