Embedded tweets in NEWS section.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@ title: WOODY
 <div id="news" class="grid background-cover">
   <div class="unit whole">
     <p class="section-heading">NEWS</p>
+    <div id="tweet-container">
+      <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/WoodyShortFilm" data-widget-id="343683249530339328"  data-chrome="noheader nofooter noborders transparent" height="360"></a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
   </div>
 </div>
 
