Chalk mark separator in footer.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@ title: WOODY
 <footer>
   <div class="grid">
     <div id="copyright" class="unit half align-left">
-      STUART BOWEN • WOODY &copy; 2013
+      <div>STUART BOWEN</div>
+      <div class="chalk-mark"></div>
+      <div>WOODY &copy; 2013</div>
     </div>
     <div id="email" class="unit half align-right">
       EMAIL INFO@WOODYSHORTFILM FOR MORE INFO
