Masthead separator uses chalk mark.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@ title: WOODY
       <a href="/"><img id="title" src="/img/main-title.png" width="389" height="100"/></a>
       <img id="awards" src="/img/awards.png" width="492" height="40"/>
     </div>
-    <div id="masthead-separator" class="unit whole no-gutters">
-    </div>
   </div>
+  <div id="masthead-separator"></div>
 </header>
 
 <div id="intro" class="grid background-cover">
