INFO section completed.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,28 @@ title: WOODY
       articulated 24 frames per second by the animator&rsquo;s fingers.
     </p>
     <p class="paragraph">
-      We shot the first minute of the film self-funded &mdash; and then
-      opened it up to the public and had two successful ...
+      We shot the first minute of the film self-funded, and then opened it up
+      to the public and had two successful crowd funding campaigns. We were
+      then awarded the Screen NSW <em>Emerging Film Makers Fund</em> which
+      helped us source Australia&rsquo;s best animators. The ambitions of this
+      film were always bigger than our context, but it was a great challenge to
+      try and achieve our vision in the most creative ways possible. We built
+      the sets out of paper, foam-core &amp; cardboard so we could achieve an
+      &lsquo;in-camera&rsquo; look while keeping costs down. We shot black and
+      white because coloured ink was too expensive. We sourced hundreds of
+      Barbie clothes through Facebook to dress the crowd and were extremely
+      fortunate to have a large group of volunteers keen to help make the
+      film.
+    </p>
+    <p class="paragraph">
+      It was so energising and inspiring to work with all the brilliant
+      collaborators who helped create WOODY. The film is an epic labor of love
+      and an awesome representation of creative collaboration resulting in
+      something better than any one person could achieve. The great thing about
+      Woody&rsquo;s journey, which resonates in the making of the film, is that
+      while Woody&rsquo;s dreams are perfect – they&rsquo;re only dreams. And
+      while reality may be less perfect, it&rsquo;s so much better, because
+      it&rsquo;s real.
     </p>
   </div>
 </div>
