Added embedded videos.

--- a/index.html
+++ b/index.html
@@ -110,21 +110,36 @@ title: WOODY
       ALL THE TIME'<br/>
       <span class="quoter">&mdash; Duke Ellington</span>
     </p>
+    <div id="youtube-trailer" class="embedded-video modal hide fade">
+      <iframe width="853" height="480"
+        src="http://www.youtube.com/embed/xAjjklfl2cU?rel=0"
+        frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div id="youtube-making-of" class="embedded-video modal hide fade">
+      <iframe width="853" height="480"
+        src="http://www.youtube.com/embed/Lsh9YKM24Ww?rel=0"
+        frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div id="youtube-mood-reel" class="embedded-video modal hide fade">
+      <iframe width="853" height="480"
+        src="http://www.youtube.com/embed/v7zzFJpqgyo?rel=0"
+        frameborder="0" allowfullscreen></iframe>
+    </div>
     <div id="video-thumbnails" class="grid left-align">
       <div class="unit one-third align-center pull-left">
-        <a href="#">
+        <a href="#youtube-trailer" data-toggle="modal">
           <img src="/img/woody-trailer-thumb.jpg" width="133"><br/>
         Woody<br/>
         Trailer</a>
       </div>
       <div class="unit one-third align-center">
-        <a href="#">
+        <a href="#youtube-making-of" data-toggle="modal">
           <img src="/img/woody-making-of-thumb.jpg" width="133"><br/>
         The Making<br/>
         of Woody</a>
       </div>
       <div class="unit one-third align-center pull-right">
-        <a href="#">
+        <a href="#youtube-mood-reel" data-toggle="modal">
           <img src="/img/woody-mood-reel-thumb.jpg" width="133"><br/>
         Woody<br/>
         Mood Reel</a>
