Added carousel proof of concept.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,38 @@ title: WOODY
 
 <div id="images" class="grid background-cover">
   <div class="unit whole">
+    <div id="image-carousel" class="carousel slide modal hide fade">
+      <ol class="carousel-indicators">
+        <li data-target="#image-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#image-carousel" data-slide-to="1"></li>
+        <li data-target="#image-carousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="active item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
+        <div class="item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
+        <div class="item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
+      </div>
+      <a class="carousel-control left" href="#image-carousel" data-slide="prev">&lsaquo;</a>
+      <a class="carousel-control right" href="#image-carousel" data-slide="next">&rsaquo;</a>
+    </div>
     <p class="section-heading">IMAGES</p>
+    <div class="grid">
+      <div class="unit one-third">
+        <a href="#image-carousel" data-toggle="modal">
+          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
+        </a>
+      </div>
+      <div class="unit one-third">
+        <a href="#image-carousel" data-toggle="modal">
+          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
+        </a>
+      </div>
+      <div class="unit one-third">
+        <a href="#image-carousel" data-toggle="modal">
+          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
