--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: WOODY
+carousel_images: [[1, 1, 1], [1, 1, 1], [1, 1, 1]]
 ---
 
 <header>
@@ -152,36 +153,39 @@ title: WOODY
   <div class="unit whole">
     <div id="image-carousel" class="carousel slide modal hide fade">
       <ol class="carousel-indicators">
-        <li data-target="#image-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#image-carousel" data-slide-to="1"></li>
-        <li data-target="#image-carousel" data-slide-to="2"></li>
+        {%assign first = true %}
+        {%assign indicator_index = -1%}
+        {%for row in page.carousel_images%}
+          {%for img in row%}
+          <li data-target="#image-carousel" data-slide-to="{%increment indicator_index%}"{%if first%} class="active"{%endif%}></li>
+          {%assign first = false%}
+          {%endfor%}
+        {%endfor%}
       </ol>
       <div class="carousel-inner">
-        <div class="active item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
-        <div class="item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
-        <div class="item"><img src="/img/carousel/001.jpg" width="800" alt=""></div>
+        {%assign first = true %}
+        {%for row in page.carousel_images%}
+          {%for img in row%}
+          <div class="{%if first%}active {%endif%}item"><img src="/img/carousel/{{img}}.jpg" width="800" alt=""></div>
+          {%assign first = false%}
+          {%endfor%}
+        {%endfor%}
       </div>
       <a class="carousel-control left" href="#image-carousel" data-slide="prev">&lsaquo;</a>
       <a class="carousel-control right" href="#image-carousel" data-slide="next">&rsaquo;</a>
     </div>
     <p class="section-heading">IMAGES</p>
+    {%for row in page.carousel_images%}
     <div class="grid">
+      {%for img in row%}
       <div class="unit one-third">
         <a href="#image-carousel" data-toggle="modal">
-          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
+          <img src="/img/carousel/thumbs/{{img}}.jpg" width="115" alt="">
         </a>
       </div>
-      <div class="unit one-third">
-        <a href="#image-carousel" data-toggle="modal">
-          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
-        </a>
-      </div>
-      <div class="unit one-third">
-        <a href="#image-carousel" data-toggle="modal">
-          <img src="/img/carousel/thumbs/001.jpg" width="115" alt="">
-        </a>
-      </div>
+      {%endfor%}
     </div>
+    {%endfor%}
   </div>
 </div>
 
