Added basic scroll to top functionality.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       </div>
     </div>
   </div>
+  <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
 </div>
 
 <div id="info" class="grid background-cover">
@@ -88,6 +89,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       it&rsquo;s real.
     </p>
   </div>
+  <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
 </div>
 
 <div id="news" class="grid background-cover">
@@ -98,6 +100,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   </div>
+  <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
 </div>
 
 <div id="video" class="grid background-cover">
@@ -147,6 +150,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       </div>
     </div>
   </div>
+  <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
 </div>
 
 <div id="images" class="grid background-cover">
@@ -188,6 +192,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
     </div>
     {%endfor%}
   </div>
+  <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
 </div>
 
 <footer>
