Made intro responsive.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       OUT OF HAND
     </div>
     <div class="sub-title">
-      THE STOP MOTION ANIMATED<br/>
-      SHORT FILM
+      THE STOP MOTION ANIMATED SHORT FILM
     </div>
     <div class="social">
       <a href="https://www.facebook.com/pages/Woody-Short-Film/147284742082289" target="_blank"><img src="/img/facebook.png" width="38" height="38"/></a>
@@ -38,7 +37,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
           <li><a href="#images">IMAGES</a></li>
         </ul>
       </div>
-      <div id="credits" class="unit half pull-right">
+      <div id="credits" class="unit half pull-right hide-on-mobiles">
         <img src="/img/credits.png" width="454" height="53"/>
       </div>
     </div>
