Made video section responsive.

--- a/index.html
+++ b/index.html
@@ -132,20 +132,17 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       <div class="unit one-third align-center pull-left">
         <a href="#youtube-trailer" data-toggle="modal">
           <img src="/img/woody-trailer-thumb.jpg" width="133"><br/>
-        Woody<br/>
-        Trailer</a>
+        Woody Trailer</a>
       </div>
       <div class="unit one-third align-center">
         <a href="#youtube-making-of" data-toggle="modal">
           <img src="/img/woody-making-of-thumb.jpg" width="133"><br/>
-        The Making<br/>
-        of Woody</a>
+        The Making of Woody</a>
       </div>
       <div class="unit one-third align-center pull-right">
         <a href="#youtube-mood-reel" data-toggle="modal">
           <img src="/img/woody-mood-reel-thumb.jpg" width="133"><br/>
-        Woody<br/>
-        Mood Reel</a>
+        Woody Mood Reel</a>
       </div>
     </div>
   </div>
