--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       <div>WOODY &copy; 2013</div>
     </div>
     <div id="email" class="unit half align-right">
-      EMAIL INFO@WOODYSHORTFILM FOR MORE INFO
+      EMAIL <a href="mailto:info@woodyshortfilm.com">INFO@WOODYSHORTFILM.COM</a> FOR MORE INFO
     </div>
   </div>
 </footer>
