Made copy changes to INFO section, including addition of Director's Statement sub-heading.

--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
     <p class="paragraph">
       Ever since he was a child, Woody has dreamt of playing piano. The
       problem is that he only has wooden paddles for hands. Stuck in a job
-      he doesn&rsquo;t want, Woody spends his days of being a concert
+      he doesn&rsquo;t want, Woody spends his days dreaming of being a concert
       pianist. His dreams are big...but they&rsquo;re about to get out of
       hand.
     </p>
+    <p class="section-sub-heading">DIRECTOR'S STATEMENT</p>
     <p class="paragraph">
       WOODY was in production for over 2 years and developed from 
-      conversations I was having with producer Jodi Matterson. I&rsquo;ve
-      always loved stop motion and was keen to tell an animated story. There
+      conversations between producer Jodi Matterson and I. There
       is a brilliant tactility to stop motion, and a great resonance
       thematically with the story of a character wanting fingers &mdash;
       articulated 24 frames per second by the animator&rsquo;s fingers.
     </p>
     <p class="paragraph">
-      We shot the first minute of the film self-funded, and then opened it up
-      to the public and had two successful crowd funding campaigns. We were
-      then awarded the Screen NSW <em>Emerging Film Makers Fund</em> which
+      The first minute of the film was shot self-funded, and then we opened it
+      up to the public and had two successful crowd funding campaigns. We were
+      then awarded the <em>Screen NSW Emerging Film Makers Fund</em> which
       helped us source Australia&rsquo;s best animators. The ambitions of this
       film were always bigger than our context, but it was a great challenge to
-      try and achieve our vision in the most creative ways possible. We built
-      the sets out of paper, foam-core &amp; cardboard so we could achieve an
+      try and achieve our vision as creatively as possible. We built
+      the sets out of paper, foam-core, &amp; cardboard so we could achieve an
       &lsquo;in-camera&rsquo; look while keeping costs down. We shot black and
       white because coloured ink was too expensive. We sourced hundreds of
       Barbie clothes through Facebook to dress the crowd and were extremely
@@ -78,14 +78,14 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       film.
     </p>
     <p class="paragraph">
-      It was so energising and inspiring to work with all the brilliant
-      collaborators who helped create WOODY. The film is an epic labor of love
-      and an awesome representation of creative collaboration resulting in
-      something better than any one person could achieve. The great thing about
-      Woody&rsquo;s journey, which resonates in the making of the film, is that
-      while Woody&rsquo;s dreams are perfect – they&rsquo;re only dreams. And
-      while reality may be less perfect, it&rsquo;s so much better, because
-      it&rsquo;s real.
+      The process of getting to work with our brilliant collaborators on this
+      film was completely energising and inspiring. The film is an epic labor
+      of love and an awesome representation of creative collaboration resulting
+      in something better than any one person could achieve. The great thing
+      about Woody&rsquo;s journey, which resonates in the making of the film,
+      is that while Woody&rsquo;s dreams are perfect – they&rsquo;re only
+      dreams. And while reality may be less perfect, it&rsquo;s so much better,
+      because it&rsquo;s real.
     </p>
   </div>
   <a class="top" href="/"><img src="/img/top.png" width="16" height="16"></a>
