Footer email link improvement.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
     </p>
     <p class="section-sub-heading">DIRECTOR'S STATEMENT</p>
     <p class="paragraph">
-      WOODY was in production for over 2 years and developed from 
+      WOODY was in production for over 2 years and developed from
       conversations between producer Jodi Matterson and I. There
       is a brilliant tactility to stop motion, and a great resonance
       thematically with the story of a character wanting fingers &mdash;
@@ -199,7 +199,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
       <div>WOODY &copy; 2013</div>
     </div>
     <div id="email" class="unit half align-right">
-      EMAIL <a href="mailto:info@woodyshortfilm.com">INFO@WOODYSHORTFILM.COM</a> FOR MORE INFO
+      EMAIL <a href="mailto:info@woodyshortfilm.com">INFO@WOODYSHORTFILM.COM</a>
     </div>
   </div>
 </footer>
