Added new header image which includes both title and awards.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
 
 <header>
   <div class="grid">
-    <div id="masthead" class="unit whole no-gutters">
-      <a href="/"><img id="title" src="/img/main-title.png" width="389" height="100"/></a>
-      <img id="awards" src="/img/awards.png" width="492" height="40"/>
-    </div>
+    <div id="masthead" class="unit whole no-gutters"></div>
   </div>
   <div id="masthead-separator"></div>
 </header>
