--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
 <div id="video" class="grid background-cover">
   <div class="unit whole">
     <p class="section-heading">VIDEO</p>
-    <p class="quote">'WHERE DID YOU GET<br/>
-      YOUR IDEAS FROM?'<br/>
-      'THE IDEAS? OH MAN...<br/>
+    <p class="quote">WHERE DID YOU GET<br/>
+      YOUR IDEAS FROM?<br/>
+      THE IDEAS? OH MAN...<br/>
       I GOT A MILLION DREAMS...<br/>
-      IT'S ALL I DO IS DREAM...<br/>
-      ALL THE TIME'<br/>
+      IT&#39;S ALL I DO IS DREAM...<br/>
+      ALL THE TIME<br/>
       <span class="quoter">&mdash; Duke Ellington</span>
     </p>
     <div id="youtube-trailer" class="embedded-video modal hide fade" tabindex="-1">
