Replace Mood Reel with Trailer 2

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
         src="http://www.youtube.com/embed/Lsh9YKM24Ww?rel=0"
         frameborder="0" allowfullscreen></iframe>
     </div>
-    <div id="youtube-mood-reel" class="embedded-video modal hide fade" tabindex="-1">
+    <div id="youtube-trailer-2" class="embedded-video modal hide fade" tabindex="-1">
       <iframe width="853" height="480"
-        src="http://www.youtube.com/embed/v7zzFJpqgyo?rel=0"
+        src="http://www.youtube.com/embed/KECfrOMpMDs?rel=0"
         frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="video-thumbnails" class="grid left-align">
@@ -137,9 +137,9 @@ carousel_images: [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]
         The Making of Woody</a>
       </div>
       <div class="unit one-third align-center pull-right">
-        <a href="#youtube-mood-reel" data-toggle="modal">
-          <img src="/img/woody-mood-reel-thumb.jpg" width="133"><br/>
-        Woody Mood Reel</a>
+        <a href="#youtube-trailer-2" data-toggle="modal">
+          <img src="/img/woody-trailer-2-thumb.jpg" width="133"><br/>
+        Woody Trailer 2</a>
       </div>
     </div>
   </div>
